# python-agents-examples

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
.automation/: README.md  known-models.yaml  pyproject.toml
.automation/voice_agent_generator/: __init__.py  cli.py  evaluator.py  fixer.py  generator.py  orchestrator.py  planner.py  plivo_docs.py  readme_gen.py  registry.py  triggers.py
.claude/commands/: document-example.md  implement-agent.md  review-example.md  scaffold-example.md  (+1 more)
daily-plivo/: README.md
gemini-deepgram-cartesia-native/: README.md  pyproject.toml  utils.py
gemini-deepgram-cartesia-native-sip/: .env.example  Dockerfile  README.md  pyproject.toml  sip.py  utils.py
gemini-deepgram-elevenlabs-native/: .env.example  README.md  pyproject.toml
gemini-live-native/: README.md
gemini-live-native-no-vad/: pyproject.toml  utils.py
gemini-live-native-silero/: pyproject.toml
gemini-live-native-webrtcvad/: utils.py
gemini-live-pipecat/: .gitignore  README.md  agent.py  env.example  pyproject.toml  utils.py  voice_agent.py
gemini-live-pipecat/inbound/: agent.py  server.py  system_prompt.md
gemini-live-pipecat/outbound/: agent.py  server.py  system_prompt.md
gemini-live-pipecat/tests/: test_e2e_live.py  test_greeting_live.py  test_integration.py  test_live_call.py  test_multiturn_voice.py  test_outbound_call.py
gemini-live-plivo/: README.md
gemini2-deepgramnova2-cartesiasonic2-native/: .env.example  README.md  pyproject.toml
gemini2-deepgramnova2-elevenflashv2.5-native/: README.md  pyproject.toml
gemini2.5-live-native/: README.md
gemini2.5-live-native-no-vad/: Dockerfile  README.md  pyproject.toml
gemini2.5-live-native-webrtcvad/: Dockerfile  README.md  pyproject.toml
gemini2.5-live-pipecat/: README.md  pyproject.toml  utils.py
gemini3.1-live-native/: pyproject.toml
gpt-assemblyai-cartesia-native/: .env.example  README.md
gpt-realtime-native/: .env.example  README.md  pyproject.toml  utils.py
gpt4.1-deepgramnova3-elevenflashv2.5-vapi/: README.md  pyproject.toml
gpt4.1-sarvam-elevenflashv2.5-native/: pyproject.toml
gpt4.1mini-gpt4.1-deepgramnova3-elevenflashv2.5-native/: Dockerfile  README.md  pyproject.toml
gpt4.1mini-sarvam-elevenlabs-native/: .env.example  README.md  pyproject.toml  utils.py
gpt4o-deepgram-openaitts-pipecat/: .env.example  README.md  pyproject.toml
gpt4o-deepgramnova3-openaitts4o-pipecat/: README.md  pyproject.toml  utils.py
gpt5.2-deepgramflux-elevenflashv2.5-livekit/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  utils.py
gpt5.2-deepgramflux-elevenflashv2.5-livekit/inbound/: agent.py  server.py  system_prompt.md
gpt5.2-deepgramflux-elevenflashv2.5-livekit/outbound/: agent.py  server.py  system_prompt.md
gpt5.2-deepgramflux-elevenflashv2.5-livekit/tests/: helpers.py  test_e2e_live.py  test_integration.py  test_live_call.py  test_multiturn_voice.py  test_outbound_call.py
gpt5.4-assemblyaiu3-cartesiasonic3-native/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
gpt5.4-deepgramnova3-groktts3-native/: pyproject.toml
gpt5.4-speechmaticsagent-elevenflashv2.5-native/: .env.example  Dockerfile  README.md  pyproject.toml  utils.py
gpt5.4mini-assemblyai-cartesia-livekit/: .env.example  README.md  pyproject.toml  utils.py
gpt5.4mini-assemblyai-cartesia-livekit/inbound/: agent.py  server.py  system_prompt.md
gpt5.4mini-assemblyai-cartesia-livekit/outbound/: agent.py  server.py  system_prompt.md
gpt5.4mini-assemblyai-cartesia-livekit/tests/: test_e2e_live.py  test_integration.py  test_live_call.py  test_multiturn_voice.py  test_outbound_call.py
gpt5.4mini-assemblyai-cartesia-native/: Dockerfile  README.md  utils.py
gptrealtime1.5-native/: Dockerfile  README.md  pyproject.toml
grok-voice-native/: .env.example  README.md  utils.py
grok3-voice-native/: README.md  pyproject.toml
pipecat-plivo/: README.md
scripts/: validate-example.sh
(+216 files in other folders)
